Change variables and comments